flux/apps/ssarchiver/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ssarchiver
spec:
  selector:
    app: ssarchiver
  ports:
  - name: http
    port: 8080
    targetPort: 8080
